<resources>
<!-- LABELS -->
    <string name="app_name">The Idioms Book</string>
    <string name="menu_settings">Settings</string>
    <string name="lbl_spanish">Spanish</string>
    <string name="lbl_english">English</string>
    <string name="lbl_quiz">Quiz</string>
    <string name="lbl_exit">Exit</string>
    <string name="lbl_spanish_list_title">Spanish idioms</string>
    <string name="lbl_english_list_title">English idioms</string>
    <string name="lbl_desc_spanish">An alphabetical list of spanish idioms</string>
    <string name="lbl_desc_english">An alphabetical list of english idioms</string>
    <string name="lbl_desc_quiz">A game to test your knowledge</string>
    <string name="lbl_desc_exit">Close the Idioms Book</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_idiom">Idiom</string>
    <string name="lbl_examples">Examples</string>
    <string name="lbl_main_menu_title">Main menu</string>
    <string name="lbl_quiz_menu">Quiz setup</string>
    <string name="lbl_quiz_results">Quiz results</string>
    <string name="lbl_number_of_questions">Number of questions</string>    
    <string name="lbl_number_of_responses">Number of response options</string>    
    <string name="lbl_idioms_language">Idioms language</string>
    <string name="lbl_start_quiz">Start</string>
    <string name="lbl_restart_quiz">Play again</string>    
    <string name="lbl_question">Question</string>  
    <string name="lbl_of">of</string>
    <string name="lbl_list_of_idioms">List of idioms</string>
    <string name="lbl_menu_search">Search</string>
    <string name="lbl_menu_refresh">Refresh</string>
    <string name="lbl_menu_share">Share</string>
    <string name="lbl_menu_settings">Settings</string>
    <string name="lbl_menu_search_hint">Search idioms</string>
    <string name="lbl_menu_search_hint_english">English idioms</string>
    <string name="lbl_menu_search_hint_spanish">Spanish idioms</string>
    <string name="lbl_search_results">Search results</string>
    <string name="lbl_obtained">You have guessed</string>
    <string name="lbl_results_summary">Answers summary</string>
    <string name="lbl_exit_quiz_header">Exit quiz?</string>
    <string name="lbl_installing_database">Installing database</string>
    <string name="lbl_delete_history_cache">Delete search history</string>
    <string name="lbl_settings_cache">Cache</string>
    <string name="lbl_settings_quiz">Quiz</string>
    <string name="lbl_settings_dlg_num_questions">Set a number of questions</string>
    <string name="lbl_settings_num_questions">Number of questions</string>
    <string name="lbl_settings_dlg_num_responses">Set a number of responses</string>
    <string name="lbl_settings_num_responses">Number of responses</string>
    <string name="lbl_settings_quiz_language">Language</string>
<!-- MESSAGES -->
    <string name="msg_empty_list">We are sorry. There are no expressions for the language selected.</string>
    <string name="msg_empty_search">No results founded.</string>
    <string name="msg_num_questions_empty">Number of questions must be between 1 and 50.</string>
    <string name="msg_num_responses_empty">Number of response options must be between 2 and 10.</string>    
    <string name="msg_search_button">Search</string>    
    <string name="msg_num_questions_bad_number">Number of questions must be a number.</string>
    <string name="msg_num_responses_bad_number">Number of responses must be a number.</string>    
    <string name="msg_exit_quiz">You will lose your progress.</string>
    <string name="msg_dialog_installing_database">You only will see this message the first time you open the App or if we have done an update.</string>
    <string name="msg_database_installation_completed">Database installed.</string>
    <string name="msg_database_installation_error">Database installation error. Please try again.</string>
    <string name="msg_no_additional_information">There is no additional information for this idiom.</string>
    <string name="msg_no_examples">There is no examples for this idiom.</string>
    <string name="msg_history_deleted">History deleted</string>   
    <string name="msg_settings_delete_history_cache">Remove idioms search history</string>
    <string name="msg_settings_num_questions">Set default number of questions</string>
    <string name="msg_settings_num_responses">Set default number of response options</string>
    <string name="msg_settings_quiz_language">Set the default language of the idioms asked</string>
    <string name="msg_toast_slide_screen">&lt; &gt; Slide the screen to see more idioms</string> 
</resources>